# OS-visualization

./: .gitignore  README.md  aischedular.py  data.json  gui.py  main.py  model.py  pyproject.toml  reqirements.txt  training.py  visualize_algo.py
agent/: aischedular.ipynb  data.json  pyproject.toml
algorithms/fcfs/: FCFS.csv  fcfs  fcfs.c
algorithms/priority/: Priority.c  Priority.csv  priority
algorithms/round_robin_c/: RR.csv  round_robin  round_robin.c
algorithms/sjf/: SJF.csv  sjf  sjf.c
algorithms/srtf/: SRTF.csv  srtf  srtf.c
algorithms/viz/: index.html  visualize.py  visualize_algo.py
roundRobin/: roundrobin.py
roundRobin/round_robin_c/: processes_data.csv  round_robin  round_robin.c
roundRobin/viz/: visualize.py
utils/: __init__.py  cpu_scheduling.py
