[project]
name = "meta-scheduler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "ipython>=9.12.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "tensorflow>=2.21.0",
]
